# User-Config-Management-Tool

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  pyproject.toml
src/ucmt/: cmt.py  database.py  init.py  locate.py  main.py  path_translator.py
tests/: conftest.py
tests/test_config_management_tool/: conftest.py  test_cmt.py  test_database.py
