[tool.poetry]
name = "ucmt"
version = "0.1.0"
description = "ucmt(User Config Management Tool) is the multiplatform(Windows, Mac, Linux) tool managing config in user space."
license = "MIT"
authors = ["Yuya.Nagai <ynny.opem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
docopt = "^0.6.2"
tinydb = "^3.15.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = { version = "^3.7", optional = true }
autopep8 = { version = "^1.4", optional = true }
jupyter = { version = "^1.0", optional = true }
doc8 = "^0.8.0"

[tool.poetry.extras]
vscode = ["flake8", "autopep8", "jupyter"]

[tool.poetry.plugins]
[tool.poetry.plugins."console_scripts"]
"ucmt" = "ucmt.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
